BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_UserCredentials__c.object
<CustomObject>
    <description>This object is a junction between of User and HSvc_ExternalSystemCredentials__c object. This is responsible for holding the different URLs  and the user credentials for those urls for a specific User</description>
    <fields>
        <fullName>ExternalSystemCredential__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>External System Credential</label>
        <referenceTo>HSvc_ExternalSystemCredentials__c</referenceTo>
        <relationshipLabel>UserCredentials</relationshipLabel>
        <relationshipName>UserCredentials</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserSystemID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UserSystemID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserCredentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>User Credentials</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UC-{00000}</displayFormat>
        <label>User Credential ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserCredentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>